Inital Commit and customized the coc-diagnostics message colors

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -9,7 +9,7 @@
 "diagnostic.errorSign": "••",
 "diagnostic.warningSign": "•",
 "diagnostic.infoSign": "•",
-"diagnostic.level": "information",
+"diagnostic.hintSign": "•",
 
 "rust-analyzer.inlayHints.chainingHints.enable": false,
 
