New tabline plugin plus other configs

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -5,6 +5,7 @@
 "diagnostic.virtualTextCurrentLineOnly": false,
 "diagnostic.showUnused": false,
 "diagnostic.enableMessage": "never",
+"diagnostic.messageLevel":"information",
 
 "diagnostic.errorSign": "••",
 "diagnostic.warningSign": "•",
